bk_ida/gccida/c0/compensate_edge
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compensate_edge/src/reg-stack.c:2945:1: error: must use 'enum' tag to refer to type 'emit_where'
emit_where v2; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compensate_edge/src/reg-stack.c:2953:1: error: unknown type name 'block_info_0'; did you mean 'block_info'?
block_info_0 bi; // [rsp+60h] [rbp-30h] 
^~~~~~~~~~~~
block_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compensate_edge/src/reg-stack.c:202:4: note: 'block_info' declared here
} *block_info;
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compensate_edge/src/reg-stack.c:2963:8: error: use of undeclared identifier 'block_info_0'
bi = ( block_info_0)block->aux; 
       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compensate_edge/src/obj/reg-stack.o] Error 1
